# Gmini

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.json
.github/: copilot-instructions.md
config/: README.md  model-runner.yaml  offload-config.yaml
docker/: Dockerfile  proxy.Dockerfile
docs/: CLIENT_CONFIG.md  SANDPACK_COMPONENTS.md  SANDPACK_MIGRATION.md  index.html
examples/: basic_usage.py
gmini/: __init__.py  core.py  server.py
scripts/: start.sh
src/: App.tsx  browserAgent.ts  index.css  index.ts
src/handlers/: featureHandlers.ts  projectHandlers.ts  taskHandlers.ts
src/proxy/: server.js
tests/: app.spec.ts  browserAgent.test.ts  home.spec.ts
web/: README.md  index.html  package.json
web/src/: App.jsx  styles.css
web/src/components/: MonacoEditor.jsx
